# dotenv-schema-validator

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: dotenv-schema-validator-spec.md
dotenv_schema_validator/: cli.py  generate_cli.py  generator.py  parser.py  validator.py
tests/: test_cli.py  test_generator.py  test_parser.py  test_validator.py
