[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotenv-schema-validator"
version = "0.1.0"
description = "Validate .env files against a .schema.env schema file"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
]

[project.scripts]
dotenv-validate = "dotenv_schema_validator.cli:main"
dotenv-schema-generate = "dotenv_schema_validator.generate_cli:main"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=8.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
